src/main/webapp/css/style.css
body {
	margin:0;
}

#menu {
	width:100%;
	height:30px;
	background: -moz-linear-gradient(#C0C0C0, #000000, #C0C0C0);
	padding:0;
	margin:0;
	list-style-type:none;
	top: 0;
	left: 0;
}

#menu li {
	float:left;   
	width:100px;
	border:0;
	padding:0;
	margin:0;
}

#menu li a {
	display:block;
	line-height:30px;
	background: -moz-linear-gradient(#C0C0C0, #000000, #C0C0C0);
	color:#DCDCDC;
	text-decoration:none;
	text-align:center;
}

#menu li a:hover {
	background: -moz-linear-gradient(#CCCCCC, #111111, #CCCCCC);
	color:white;
	border:1px;
	border-style: solid;
	border-color: black;
	line-height:28px;
}

#menu .submenu {
	display: none;
	list-style-type: none;
	position: absolute;
	margin: 0;
	padding: 0;
	border: 0;	
}

#menu li:hover > .submenu {
	display: block;
}

#menu .submenu li {
	float: none;
	margin: 0;
	padding: 0;
	border: 0;	
	width: 100px;
	font-size:0.9em;
}

#menu .submenu li a {
	display:block;
	line-height:20px;
	padding:5px;
	background: -moz-linear-gradient(#C0C0C0, #000000, #C0C0C0);
	color:#DCDCDC;
	text-decoration:none;
	text-align:left;
}		

#menu .submenu li a:hover {
	background: -moz-linear-gradient(#CCCCCC, #111111, #CCCCCC);
	color:white;
	border:1px;
	padding-left:4px;
	border-style: solid;
	border-color: black;
	line-height:18px;
}

#menu #authentication {
	padding-right:4px;
	line-height:30px;
	float:right;   
	width: auto;
	color:#DCDCDC;
}

#menu #authentication a {
	background: none;
	color:none;
	border:0;
	display:inline;
}

.entity {
	background:none;
}

.entity:hover {
	background:#FFFFAA;
}

